# MagicCamera

./: .gitignore  build.gradle
app/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
magicfilter/: build.gradle
magicfilter/src/main/jni/: CMakeLists.txt
